--- a/resumen.tex
+++ b/resumen.tex
@@ -1,5 +1,5 @@
 % !TEX encoding = UTF-8 Unicode
-% !TEX root = GAN075.tex
+% !TEX root = GANXXX.tex
 % !TeX spellcheck = es_ES
 %%=========================================
 \addcontentsline{toc}{chapter}{Resumen}
