--- a/preamble.sty
+++ b/preamble.sty
@@ -9,7 +9,7 @@
 %
 % PAQUETEs DE FUENTES Y ESTILOS
 \usepackage{helvet}
-\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
 \usepackage[spanish,es-nodecimaldot]{babel}
 \renewcommand{\familydefault}{\sfdefault}
 \usepackage{courier}
@@ -78,7 +78,6 @@
 \usepackage{pdfpages}
 \usepackage[usenames,dvipsnames]{pstricks}
 \usepackage{cite} 
-\usepackage{gensymb}
 %
 %
 %
