--- a/GANXXX.tex
+++ b/GANXXX.tex
@@ -1,5 +1,5 @@
-% !TEX encoding = UTF-8 Unicode
-% !TEX spellcheck = es_ES
+% !TeX encoding = UTF-8 Unicode
+% !TeX spellcheck = es_ES
 
 % Plantilla para el Trabajo de Fin de Grado/Máster de la Escuela Técnica 
 % Superior de Ingenieros Navales de la Universidad Politécnica de Madrid.
