--- a/portada.tex
+++ b/portada.tex
@@ -1,6 +1,6 @@
-% !TEX encoding = UTF-8 Unicode
-% !TEX root = GANXXX.tex
-% !TEX spellcheck = es_ES
+% !TeX encoding = UTF-8 Unicode
+% !TeX root = GANXXX.tex
+% !TeX spellcheck = es_ES
 %%=========================================
 \newgeometry{top=1cm, bottom=1.5cm, right=1.25cm,left=1.25cm}
 
