--- a/resumen.tex
+++ b/resumen.tex
@@ -1,5 +1,5 @@
-% !TEX encoding = UTF-8 Unicode
-% !TEX root = GANXXX.tex
+% !TeX encoding = UTF-8 Unicode
+% !TeX root = GANXXX.tex
 % !TeX spellcheck = es_ES
 %%=========================================
 \addcontentsline{toc}{chapter}{Resumen}
